# zuu2

./: README.md
.github/workflows/: python-publish.yml
PYTHON_PKG/alpha/: pyproject.toml
PYTHON_PKG/alpha/src/zuu/common/: advancedQuery.py  cliTerminalSelect.py
PYTHON_PKG/alpha/tests/: test_advanced_query.py
PYTHON_PKG/app/: pyproject.toml
PYTHON_PKG/app/src/zuu/app/: clipchamp.py  eaglecool.py  git.py  github.py  scoop.py
PYTHON_PKG/app/tests/: test_github.py
PYTHON_PKG/cli/: pyproject.toml
PYTHON_PKG/doc/: pyproject.toml
PYTHON_PKG/doc/src/zuu/app/: pandoc.py  xelatex.py
PYTHON_PKG/doc/tests/: test_mprop.py
PYTHON_PKG/ext1/: pyproject.toml
PYTHON_PKG/ext1/src/zuu/pkg/: keyring.py
PYTHON_PKG/std/: README.md  pyproject.toml
PYTHON_PKG/std/src/zuu/common/: __init__.py  clsprop.py  dictKey.py  fileProp.py  frozenDict.py  nothing.py  quickSaveDict.py  singleton.py  string.py  traverse.py
PYTHON_PKG/std/src/zuu/io/: __init__.py  env.py  json.py  nestedJson.py  orjson.py  pickle.py  toml.py  xml.py  yml.py
PYTHON_PKG/std/src/zuu/pkg/: base64.py  hashlib.py  importlib.py  inspect.py  logging.py  os.py  pillow.py  pywin32.py  subprocess.py  time.py  typing.py
PYTHON_PKG/std/src/zuu/winusr/: __init__.py
PYTHON_PKG/std/tests/: test_common_dictkey.py  test_common_fileprop.py  test_common_quickSaveDict.py  test_common_singleton.py  test_common_string.py  test_common_traverse.py  test_io_json.py  test_pkg_importlib.py  test_pkg_os.py  test_pkg_time.py
PYTHON_PKG/va/: pyproject.toml
PYTHON_PKG/va/src/zuu/common/: gridOrientation.py  timelyKill.py
PYTHON_PKG/va/src/zuu/pkg/: psutil.py  pygetwindow.py  pyscreeze.py  screeninfo.py
PYTHON_PKG/va/tests/: gatherer_test.py
PYTHON_SNIPPETS/: pyproject.toml
PYTHON_SNIPPETS/src/python_snippets/: crack 7zip password.py  cryptography.py  discord embeds.py  easyocr get_coords.py  extended yaml that supports nesting.py  grid orientation.py  mediawiki parser.py  nested dict.py  repo caching.py  smart type.py  video generate thumbnail.py
WORKSPACES/: py_snippets.code-workspace  py_zuu_alpha.code-workspace  py_zuu_app.code-workspace  py_zuu_cli.code-workspace  py_zuu_doc.code-workspace  py_zuu_ext1.code-workspace  py_zuu_std.code-workspace  py_zuu_va.code-workspace
