[project]
name = "python-snippets"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]

requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pygetwindow>=0.0.9",
    "zuu[va] @ git+https://github.com/zwtil/zuu2.git#subdirectory=PYTHON_PKG/std",
    "numpy>=2.1.3",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_snippets"]
