[project]
name = "zuu-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    "zuu @ git+https://github.com/zwtil/zuu2.git#subdirectory=PYTHON_PKG/std",
    "requests>=2.32.3",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zuu"]
