[project]
name = "zuu-app"
version = "0.1.1"
description = "zuu submodule for apps"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    
    "requests>=2.32.3",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "zuu @ git+https://github.com/zwtil/zuu2.git#subdirectory=PYTHON_PKG/std",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zuu"]
