[project]
name = "zuu"
version = "5.0.0"
description = "Zack's Useful Utilities"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
io = [
    "pyyaml>=6.0.2",
    "orjson>=3.10.12",
    "toml>=0.10.2",
]
    
va = [
    "zuu-va @ git+https://github.com/zwtil/zuu2.git#subdirectory=PYTHON_PKG/va",
]
app = [
    "zuu-app @ git+https://github.com/zwtil/zuu2.git#subdirectory=PYTHON_PKG/app",
]
cli = [
    "zuu-cli @ git+https://github.com/zwtil/zuu2.git#subdirectory=PYTHON_PKG/cli",
]
ext1 = [
    "zuu-ext1 @ git+https://github.com/zwtil/zuu2.git#subdirectory=PYTHON_PKG/ext1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pillow>=11.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zuu"]

[tool.ruff]
ignore = ["F401"]
